<resources>
    <string name="app_name">Hotel (JVM)</string>

    <string name="room_type_placeholder">Type: unknown</string>
    <string name="room_floor_placeholder">Floor: unknown</string>
    <string name="room_isFree_placeholder">Status: free</string>
    <string name="room_type_options_placeholder">Options: no options</string>
    <string name="room_type_price_placeholder">Price: unknown</string>
    <string name="room_description_placeholder">Description: unknown</string>
    <string name="room_address_placeholder">Address: unknown</string>
    <string name="room_places_placeholder">Places: unknown</string>

    <string name="room_type_header">Type info</string>
    <string name="room_info_header">Room info</string>

    <string name="edit_btn_alt">Edit button</string>
    <string name="create_btn_alt">Create button</string>
    <string name="delete_btn_alt">Delete button</string>

    <string name="edit_room_modal_header">Edit room</string>

    <string name="connection_error">connection error</string>

    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="floor">Floor</string>
    <string name="places">Places</string>
    <string name="type">Type</string>
    <string name="info">Info</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="book_btn_alt">Book room</string>
</resources>