<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/room_card_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_type_placeholder"
            android:textColor="?attr/mainTextColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/room_card_floor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_floor_placeholder"
            android:textColor="?attr/mainTextColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/room_card_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_isFree_placeholder"
            android:textColor="?attr/colorAccent"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>